# lambda-sampler

./: LICENSE  README.md  lambda-sampler.cabal  stack.yaml
Data/: Lambda.hs
Data/Lambda/: Model.hs  Random.hs
Data/Lambda/Random/: MixedSystem.hs  Oracle.hs  PlainSystem.hs  System.hs
tests/: TestSuite.hs  Utils.hs
