name:                lambda-sampler
version:             0.1.0.0
synopsis:            Boltzmann sampler utilities for lambda calculus. 
license:             BSD3
license-file:        LICENSE
author:              Maciej Bendkowski 
maintainer:          maciej.bendkowski@tcs.uj.edu.pl
copyright:           2016 Maciej Bendkowski
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Data.Lambda
                     , Data.Lambda.Model
                     , Data.Lambda.Random.Oracle
                     , Data.Lambda.Random.System
                     , Data.Lambda.Random
  build-depends:       base >= 4.7 && < 5
                     , MonadRandom >= 0.4
                     , mtl >= 2.2
                     , transformers >= 0.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maciej-bendkowski/lambda-sampler
